--- a/templates/toppings.html
+++ b/templates/toppings.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
+
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
   </head>
   <body>
     <body>
